[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rgkd"
version = "0.1.0"
description = "Experimental R-GKD validators and reference helpers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rns",
]

[tool.setuptools.packages.find]
include = ["rgkd*"]

[tool.setuptools.package-data]
rgkd = ["py.typed"]
